adapt createUpload  endpoint to spec
